[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-base-dora-node"
version = "0.1.0"
description = "SPEC-VENDOR-NODE-V1 dora node bridging dora-nav (navigation, localization, map) to octos"
requires-python = ">=3.10"
dependencies = [
  "dora-rs",
  "pyarrow>=14",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nav_base_node*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"
files = ["nav_base_node"]

[[tool.mypy.overrides]]
module = ["dora", "pyarrow"]
ignore_missing_imports = true
